# retris

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: deploy.yml
src/: background.rs  background_task.rs  coordinate_system.rs  debug.rs  game.rs  game_data.rs  game_math.rs  game_over_screen.rs  game_ui.rs  grid.rs  loading_screen.rs  logger.rs  main.rs  music_manager.rs  retris_colors.rs  retris_ui.rs  sound_manager.rs  storage.rs  tetris_mobile_controller.rs  tetris_shape.rs  title_screen.rs  volume_control_screen.rs  volume_manager.rs
src/rendering/: draw_commands.rs  mod.rs  renderer.rs
src/shaders/: shader.wgsl
