[package]
name = "retris"
version = "0.1.0"
edition = "2024"

[dependencies]
# egor = { git = "https://github.com/alejandrade/egor.git", branch = "main", features = ["log", "webgl"] }
egor = { path = "egor", features = ["log", "webgl"] }

js-sys = { version = "0.3.83", optional = true }
kira = "0.11.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }

[target.wasm32-unknown-unknown.dependencies]
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.83", features = ["Window", "Storage"] }
wasm-bindgen = "0.2.106"
console_log = "1.0.0"

[features]
js-sys = ["dep:js-sys"]

